--- a/LunchCode/LunchCode.Android/packages.config
+++ b/LunchCode/LunchCode.Android/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Plugin.MediaManager" version="0.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Vibrate" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
@@ -10,5 +11,5 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="monoandroid60" />
 </packages>
