--- a/LunchCode/LunchCode.Android/packages.config
+++ b/LunchCode/LunchCode.Android/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Plugin.MediaManager" version="0.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid60" />
+  <package id="Xam.Plugins.TextToSpeech" version="3.0.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Vibrate" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
