--- a/LunchCode/LunchCode.UWP/project.json
+++ b/LunchCode/LunchCode.UWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
     "Xam.Plugins.Settings": "3.0.1",
+    "Xam.Plugins.TextToSpeech": "3.0.1",
     "Xam.Plugins.Vibrate": "3.0.1",
     "Xamarin.Forms": "2.3.4.270"
   },
