--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^8.1.2",
     "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "^8.2.2",
+    "@angular/pwa": "^0.802.1",
     "@angular/router": "^8.2.2",
+    "@angular/service-worker": "^8.2.2",
     "@jaspero/ng-alerts": "^0.1.2",
     "angular-2-local-storage": "^3.0.2",
     "angular-vibrator": "^0.2.0",
