--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~12.7.1",
+    "angular-cli-ghpages": "^0.6.0-rc.2",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
